--- a/config/xgboost_config.yaml
+++ b/config/xgboost_config.yaml
@@ -1,4 +1,4 @@
 # 모델에 전달할 hyper-parameters
 model_params:
-  n_estimators: 100
-  max_features: sqrt
+  objective: binary:logistic
+  eval_metric: logloss
